# clip-retrieval

./: Makefile  fileforclaude.py  main.py  pyproject.toml  requirements.txt
clip_retrieval/: clip_back.py
