[project]
name = "clip_retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.1,<4",
    "all-clip>=1.3.0,<2",
    "autofaiss>=2.17.0,<3",
    "clip-anytorch>=2.5.0,<3",
    "faiss-cpu>=1.7.2,<2",
    "fire>=0.4.0,<0.6.0",
    "flask>=3.0.0,<4",
    "flask-cors>=4.0.0,<5",
    "flask-restful>=0.3.9,<1",
    "fsspec>=2025.10.0",
    "h5py>=3.1.0,<4",
    "img2dataset>=1.46.0,<2",
    "multilingual-clip>=1.0.10,<2",
    "numpy>=1.19.5,<2",
    "open-clip-torch>=2.0.0,<3.0.0",
    "pandas>=1.1.5,<3",
    "prometheus-client>=0.13.1,<1",
    "requests>=2.28.0,<3",
    "scipy>=1.11.0",
    "sentence-transformers>=2.2.0,<3",
    "torch>=1.7.1,<3",
    "torchvision>=0.10.1,<2",
    "tqdm>=4.62.3,<5",
    "transformers>=4.57.3",
    "urllib3>=1.26.0",
    "wandb>=0.17.0",
    "webdataset>=0.2,<0.3",
]
